[gd_scene load_steps=11 format=2]

[ext_resource path="res://level1.gd" type="Script" id=1]
[ext_resource path="res://imgs/box(1).png" type="Texture" id=2]
[ext_resource path="res://fonts/Lato-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80.2286, 35.3764 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44.4908, 42.0435 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 81.5684, 40.6819 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 53.5823, 49.1967 )

[node name="Node2D" type="Node2D"]
position = Vector2( -11.3918, -10.3218 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 116.047, 60.9768 )
scale = Vector2( 0.322222, 0.322222 )
z_as_relative = false
frames = SubResource( 7 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 974.443, 535.747 )
scale = Vector2( 0.322222, 0.322222 )
z_as_relative = false
frames = SubResource( 7 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 121.489, 541.189 )
scale = Vector2( 0.322222, 0.322222 )
z_as_relative = false
frames = SubResource( 7 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 971.448, 77.5973 )
scale = Vector2( 0.322222, 0.322222 )
z_as_relative = false
frames = SubResource( 7 )

[node name="challenge" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 458.473
margin_top = 22.3236
margin_right = 643.473
margin_bottom = 91.3241
custom_fonts/font = SubResource( 1 )
text = "8 + 6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="supIzquierdo" type="Area2D" parent="."]
position = Vector2( 30.8271, -34.8147 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="supIzquierdo"]
position = Vector2( 84.9846, 93.4157 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="supIzquierdo"]
margin_left = -7.65277
margin_top = 57.6913
margin_right = 177.347
margin_bottom = 133.691
custom_fonts/font = SubResource( 3 )
text = "6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="supDerecha" type="Area2D" parent="."]
position = Vector2( 110.509, -9.1262 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="supDerecha"]
position = Vector2( 862.096, 82.9856 )
shape = SubResource( 4 )

[node name="Label2" type="Label" parent="supDerecha"]
margin_left = 776.155
margin_top = 46.8483
margin_right = 950.155
margin_bottom = 118.848
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infIzquierda" type="Area2D" parent="."]
position = Vector2( -14.1231, 40.5188 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="infIzquierda"]
position = Vector2( 136.225, 496.264 )
shape = SubResource( 5 )

[node name="Label3" type="Label" parent="infIzquierda"]
margin_left = 37.8566
margin_top = 455.921
margin_right = 233.857
margin_bottom = 536.921
custom_fonts/font = SubResource( 3 )
text = "7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infDerecha" type="Area2D" parent="."]
position = Vector2( 139.77, 19.2853 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="infDerecha"]
position = Vector2( 836.479, 514.472 )
shape = SubResource( 6 )

[node name="Label4" type="Label" parent="infDerecha"]
margin_left = 745.948
margin_top = 480.941
margin_right = 914.948
margin_bottom = 550.941
custom_fonts/font = SubResource( 3 )
text = "14"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="supIzquierdo" to="." method="_on_supIzquierdo_area_entered"]
[connection signal="area_entered" from="supDerecha" to="." method="_on_supDerecha_area_entered"]
[connection signal="area_entered" from="infIzquierda" to="." method="_on_infIzquierda_area_entered"]
[connection signal="area_entered" from="infDerecha" to="." method="_on_infDerecha_area_entered"]
